<resources>
    <string name="app_name">LoginWithFirebase</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="number_phone">Number phone</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="read_data">Read data</string>
    <string name="readdata">ReadData</string>
    <string name="tvAge">Age:</string>
    <string name="tvEmail">Email:</string>
    <string name="tvPhone">Phone :</string>
</resources>