<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ReadDataActivity">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/read_data"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btnReadData"
            android:layout_width="180dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/black"
            android:text="@string/readdata"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1"
            app:layout_constraintVertical_bias="0.182" />

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edittext"
            app:layout_constraintTop_toBottomOf="@+id/tv1"
            app:layout_constraintBottom_toTopOf="@+id/btnReadData"
            />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/tvAge"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnReadData" />
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/tvEmail"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAge" />
        <TextView
            android:id="@+id/tvNumberPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/tvPhone"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/Age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tvAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvAge"
            app:layout_constraintTop_toTopOf="@+id/tvAge" />

        <TextView
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tvEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvEmail"
            app:layout_constraintTop_toTopOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tvNumberPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvNumberPhone"
            app:layout_constraintTop_toTopOf="@+id/tvNumberPhone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>